--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,9 @@
+<%provide(:title, 'Help')%>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
 <h1>Help</h1>
 <p>
 Get help on the Ruby on Rails Tutorial at the
@@ -5,3 +11,5 @@ Get help on the Ruby on Rails Tutorial at the
 To get help on this sample app, see the
 <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
 </p>
+</body>
+</html>
